# Sheriff-of-Nottingham-Server

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: c-cpp.yml
bot/: bot.py
diagram/: merchantSheriffState.plantuml  waitingForPlayerState.plantuml
include/: Card.h  Game.h  Player.h  Server.h  main.h
include/controller/: Game.h
include/interface/: GameState.h
include/model/: Card.h  Constants.h  Game.h  GameStateMachine.h  MessageQueue.h  Player.h  Server.h
include/state/: GameEndedState.h  GameStartedState.h  MerchantTurnState.h  RoundStartedState.h  SheriffTurnState.h  WaitingForPlayersState.h
include/utils/: Log.h  Utils.h
src/: Card.cpp  Game.cpp  Player.cpp  Server.cpp  main.cpp
src/Controller/: Game.cpp
src/controller/: Game.cpp
src/model/: Card.cpp  Game.cpp  GameStateMachine.cpp  MessageQueue.cpp  Player.cpp  Server.cpp
src/state/: GameEndedState.cpp  GameStartedState.cpp  MerchantTurnState.cpp  RoundStartedState.cpp  SheriffTurnState.cpp  WaitingForPlayersState.cpp
src/utils/: Log.cpp  Utils.cpp
test/: main_test.cpp  test_blackMarket.cpp  test_checkBag.cpp  test_checkWinner.cpp  test_createAndSuffleDeck.cpp  test_honorAmongTheif.cpp  test_player.cpp  test_utils_json.cpp
